# Cerberus

./: CMakeLists.txt  Cerberus.sln
app/: cerberus.cpp  classes.h
vcproj-13/: Cerberus.vcxproj
